--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">JC Basics</string>
     <string name="show_less">Show less</string>
     <string name="show_more">Show more</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
